finalização do swagger, e correção na mensagem de erro de um metodo handler
